plugins {
    id  "com.github.johnrengelman.shadow" version "2.0.4"
    id  'java'
    id  'maven-publish'
}

allprojects  {
  repositories {
     mavenLocal()
     maven { url "https://oss.sonatype.org/content/repositories/releases" }
     maven { url "https://repo.mikeprimm.com" }
     maven { url "https://repo.maven.apache.org/maven2" }
     maven { url "https://hub.spigotmc.org/nexus/content/repositories/snapshots/" }
     maven { url "https://repo.codemc.org/repository/maven-public/" }
     maven { url "https://papermc.io/repo/repository/maven-public/" }
  }

  apply plugin: 'java'
  
  group = 'us.dynmap'
  version = '3.2-SNAPSHOT'

}

class Globals {
  String buildNumber =  System.getenv().BUILD_NUMBER ?: "Dev"
}
ext {
  globals = new Globals()
}

subprojects {  
  apply plugin: "com.github.johnrengelman.shadow"
  apply plugin: 'java'
  apply plugin: 'maven-publish'

  sourceCompatibility = 1.8
  targetCompatibility = 1.8
  tasks.withType(JavaCompile) {
  	options.encoding = 'UTF-8'
  }
}

clean {
  delete "target" 
}

task setupCIWorkspace {
}
